--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^10.2.10",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.2.10",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.10",
