:hammer: git reset 스크립트 추가

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "nest build",
     "start": "nest start",
     "dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
-    "test": "jest --detectOpenHandles -c jest.config.ts"
+    "test": "jest --detectOpenHandles -c jest.config.ts",
+    "reset": "git reset --soft HEAD~"
   },
   "dependencies": {
     "@nestjs/cache-manager": "^2.1.1",
