--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "typedi": "^0.10.0",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
