--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ioredis": "^5.3.2",
     "mkcert": "^3.2.0",
     "mysql2": "^3.6.2",
+    "nanoid": "^5.0.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "redis": "^4.6.11",
