--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nanoid": "^3.3.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "passport-naver": "^1.0.6",
     "redis": "^4.6.11",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -53,6 +54,7 @@
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
     "@types/passport-local": "^1.0.36",
+    "@types/passport-naver": "^1.0.4",
     "@types/supertest": "^2.0.16",
     "jest": "^27.2.5",
     "run-script-webpack-plugin": "^0.2.0",
