--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mysql2": "^3.6.2",
     "nanoid": "^3.3.7",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-naver": "^1.0.6",
     "redis": "^4.6.11",
@@ -53,6 +54,7 @@
     "@types/ioredis": "^5.0.0",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.36",
     "@types/passport-naver": "^1.0.4",
     "@types/supertest": "^2.0.16",
