--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@nestjs/core": "^10.2.10",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.10",
+    "@nestjs/platform-socket.io": "^10.4.13",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.4.13",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.3.1",
     "class-transformer": "^0.5.1",
@@ -40,6 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.8.1",
     "typedi": "^0.10.0",
     "typeorm": "^0.3.20"
   },
