--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-session": "^1.17.3",
     "ioredis": "^5.3.2",
     "mkcert": "^3.2.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.2",
     "nanoid": "^3.3.7",
     "passport": "^0.6.0",
@@ -56,6 +57,7 @@
     "@types/express-session": "^1.17.10",
     "@types/ioredis": "^5.0.0",
     "@types/jest": "27.0.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^16.0.0",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.36",
