:memo: .env.sample 수정

--- a/.env.sample
+++ b/.env.sample
@@ -9,7 +9,13 @@ REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
 
+NAVER_CLIENT_ID=
+NAVER_CLIENT_SECRET=
+
 GOOGLE_CLIENT_ID=
-GOOGLE_SECRET=
+GOOGLE_CLIENT_SECRET=
 
 SALT_OR_ROUNDS=
+
+IMAGE_UPLOAD_LOCATION=
+MAX_IMAGE_SIZE=
