--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.10",
     "@nestjs/platform-socket.io": "^10.4.13",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.4.13",
     "bcrypt": "^5.1.1",
