--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dayjs": "^1.11.8",
     "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
+    "helmet": "^8.0.0",
     "ioredis": "^5.3.2",
     "mkcert": "^3.2.0",
     "multer": "^1.4.5-lts.1",
