--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/platform-express": "^10.2.10",
     "@nestjs/platform-socket.io": "^10.4.13",
     "@nestjs/serve-static": "^4.0.2",
+    "@nestjs/throttler": "^6.3.0",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.4.13",
     "bcrypt": "^5.1.1",
