--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "reset": "git reset --soft HEAD~"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.729.0",
     "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^10.2.10",
     "@nestjs/config": "^3.2.2",
