:memo: .env.sample 수정

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,15 @@
+NODE_ENV=
 PORT=
 COOKIE_SECRET=
+
+CLIENT_ORIGIN=
+SERVER_ORIGIN=
+
+AWS_RDS_ORIGIN=
+AWS_RDS_PORT=
+AWS_RDS_USERNAME=
+AWS_RDS_PASSWORD=
+AWS_RDS_DATABASE=
 
 ORM_USERNAME=
 ORM_PASSWORD=
@@ -8,6 +18,12 @@ ORM_DATABASE=
 REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
+
+AWS_REGION=
+AWS_S3_BUCKET_NAME=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_S3_BUCKET_URL=
 
 NAVER_CLIENT_ID=
 NAVER_CLIENT_SECRET=
@@ -18,4 +34,4 @@ GOOGLE_CLIENT_SECRET=
 SALT_OR_ROUNDS=
 
 IMAGE_UPLOAD_LOCATION=
-MAX_IMAGE_SIZE=
+MAX_CHAT_IMAGE_SIZE=
