:memo: .env.sample 갱신

--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,8 @@ NODE_ENV=
 PORT=
 COOKIE_SECRET=
 
-CLIENT_ORIGIN=
-SERVER_ORIGIN=
+PRODUCTION_SERVER_ORIGIN=
+DEVELOPMENT_SERVER_ORIGIN=
 
 AWS_RDS_ORIGIN=
 AWS_RDS_PORT=
@@ -11,9 +11,9 @@ AWS_RDS_USERNAME=
 AWS_RDS_PASSWORD=
 AWS_RDS_DATABASE=
 
-ORM_USERNAME=
-ORM_PASSWORD=
-ORM_DATABASE=
+LOCAL_MYSQL_USERNAME=
+LOCAL_MYSQL_PASSWORD=
+LOCAL_MYSQL_DATABASE=
 
 REDIS_HOST=
 REDIS_PORT=
@@ -33,5 +33,4 @@ GOOGLE_CLIENT_SECRET=
 
 SALT_OR_ROUNDS=
 
-IMAGE_UPLOAD_LOCATION=
 MAX_CHAT_IMAGE_SIZE=
