--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dayjs": "^1.11.8",
     "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
+    "googleapis": "^144.0.0",
     "helmet": "^8.0.0",
     "ioredis": "^5.3.2",
     "mkcert": "^3.2.0",
