--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "nest start",
     "dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "test": "jest --detectOpenHandles -c jest.config.ts",
-    "reset": "git reset --soft HEAD~"
+    "reset": "git reset --soft HEAD~",
+    "typeorm:d": "node -r ts-node/register ./node_modules/typeorm/cli.js -d ormconfig.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.729.0",
