:memo: .env.sample 수정

--- a/.env.sample
+++ b/.env.sample
@@ -2,18 +2,14 @@ NODE_ENV=
 PORT=
 COOKIE_SECRET=
 
-PRODUCTION_SERVER_ORIGIN=
-DEVELOPMENT_SERVER_ORIGIN=
+DEV_FRONT_SERVER_ORIGIN=
+SERVER_ORIGIN=
 
-AWS_RDS_ORIGIN=
-AWS_RDS_PORT=
-AWS_RDS_USERNAME=
-AWS_RDS_PASSWORD=
-AWS_RDS_DATABASE=
-
-LOCAL_MYSQL_USERNAME=
-LOCAL_MYSQL_PASSWORD=
-LOCAL_MYSQL_DATABASE=
+DB_ORIGIN=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
 
 REDIS_HOST=
 REDIS_PORT=
