--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build": "nest build",
     "start": "nest start",
     "dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "test": "jest --detectOpenHandles -c jest.config.ts",
     "reset": "git reset --soft HEAD~",
     "typeorm:d": "node -r ts-node/register ./node_modules/typeorm/cli.js -d ormconfig.ts",
     "migration:excute": "npm run typeorm:d migration:run",
-    "migration:generate": "npm run typeorm:d migration:generate"
+    "migration:generate": "npm run typeorm:d migration:generate",
+    "pre-build": "rm -r dist/*",
+    "build": "nest build",
+    "pre-release": "ssh -i ~/.ssh/aws1.pem ec2-user@%EC2_HOSTNAME% 'cd server;rm -r dist/*'",
+    "release": "scp -i ~/.ssh/aws1.pem -r dist/* ec2-user@%EC2_HOSTNAME%:/home/ec2-user/server/dist",
+    "post-release": "ssh -i ~/.ssh/aws1.pem ec2-user@%EC2_HOSTNAME% 'sudo service nginx restart;pm2 restart main'",
+    "deploy": "npm run pre-build && npm run build && npm run pre-release && npm run release && npm run post-release"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.729.0",
