--- a/.env.sample
+++ b/.env.sample
@@ -20,6 +20,7 @@ AWS_S3_BUCKET_NAME=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_S3_BUCKET_URL=
+AWS_S3_FOLDER_NAME=
 
 NAVER_CLIENT_ID=
 NAVER_CLIENT_SECRET=
