--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "server",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -42,7 +42,6 @@
     "dayjs": "^1.11.8",
     "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
-    "googleapis": "^144.0.0",
     "helmet": "^8.0.0",
     "ioredis": "^5.3.2",
     "mkcert": "^3.2.0",
@@ -78,7 +77,6 @@
     "@types/passport-naver": "^1.0.4",
     "@types/supertest": "^2.0.16",
     "jest": "^27.2.5",
-    "pm2": "^5.4.3",
     "run-script-webpack-plugin": "^0.2.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
