--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/common": "^10.2.10",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.2.10",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.10",
     "@nestjs/platform-socket.io": "^10.4.13",
@@ -50,6 +51,7 @@
     "nanoid": "^3.3.7",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-naver": "^1.0.6",
     "redis": "^4.6.11",
@@ -73,6 +75,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^16.0.0",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.36",
     "@types/passport-naver": "^1.0.4",
     "@types/supertest": "^2.0.16",
