--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "connect-redis": "^7.1.0",
+    "cookie-parser": "^1.4.7",
     "dayjs": "^1.11.8",
     "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
@@ -68,6 +69,7 @@
     "@nestjs/testing": "^10.3.9",
     "@types/bcrypt": "^5.0.2",
     "@types/connect-redis": "^0.0.23",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.10",
     "@types/ioredis": "^5.0.0",
