--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mysql2": "^3.6.2",
     "nanoid": "^3.3.7",
     "passport": "^0.6.0",
+    "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
