--- a/package.json
+++ b/package.json
@@ -22,77 +22,76 @@
     "deploy": "npm run pre-build && npm run build && npm run pre-release && npm run release && npm run post-release"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.729.0",
+    "@aws-sdk/client-s3": "^3.940.0",
     "@keyv/redis": "^5.1.4",
-    "@nestjs/cache-manager": "^2.3.0",
-    "@nestjs/common": "^10.2.10",
-    "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^10.2.10",
-    "@nestjs/jwt": "^11.0.0",
-    "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.2.10",
-    "@nestjs/platform-socket.io": "^10.4.13",
-    "@nestjs/serve-static": "^4.0.2",
-    "@nestjs/throttler": "^6.3.0",
-    "@nestjs/typeorm": "^10.0.0",
-    "@nestjs/websockets": "^10.4.13",
-    "bcrypt": "^5.1.1",
-    "cache-manager": "^5.7.6",
+    "@nestjs/cache-manager": "^3.0.1",
+    "@nestjs/common": "^11.1.9",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.9",
+    "@nestjs/jwt": "^11.0.1",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.1.9",
+    "@nestjs/platform-socket.io": "^11.1.9",
+    "@nestjs/serve-static": "^5.0.4",
+    "@nestjs/throttler": "^6.4.0",
+    "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.9",
+    "bcrypt": "^6.0.0",
+    "cache-manager": "^7.2.5",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "connect-redis": "^7.1.0",
+    "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
-    "dayjs": "^1.11.8",
-    "dotenv": "^16.3.1",
-    "express-session": "^1.17.3",
-    "helmet": "^8.0.0",
-    "ioredis": "^5.3.2",
+    "dayjs": "^1.11.19",
+    "dotenv": "^17.2.3",
+    "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
+    "ioredis": "^5.8.2",
     "mkcert": "^3.2.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.2",
-    "nanoid": "^3.3.7",
-    "passport": "^0.6.0",
+    "multer": "^2.0.2",
+    "mysql2": "^3.15.3",
+    "nanoid": "^5.1.6",
+    "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-naver": "^1.0.6",
-    "redis": "^4.6.11",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
+    "redis": "^5.10.0",
+    "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.1.2",
+    "rxjs": "^7.8.2",
     "socket.io": "^4.8.1",
     "typedi": "^0.10.0",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.2.1",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^10.3.9",
-    "@types/bcrypt": "^5.0.2",
+    "@nestjs/cli": "^11.0.14",
+    "@nestjs/schematics": "^11.0.9",
+    "@nestjs/testing": "^11.1.9",
+    "@types/bcrypt": "^6.0.0",
     "@types/connect-redis": "^0.0.23",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.10",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/express": "^5.0.6",
+    "@types/express-session": "^1.18.2",
     "@types/ioredis": "^5.0.0",
-    "@types/jest": "27.0.2",
-    "@types/multer": "^1.4.12",
-    "@types/node": "^16.0.0",
-    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/jest": "30.0.0",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.10.1",
+    "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-jwt": "^4.0.1",
-    "@types/passport-local": "^1.0.36",
+    "@types/passport-local": "^1.0.38",
     "@types/passport-naver": "^1.0.4",
-    "@types/supertest": "^2.0.16",
-    "jest": "^27.2.5",
-    "run-script-webpack-plugin": "^0.2.0",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5",
-    "webpack": "^5.89.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
+    "run-script-webpack-plugin": "^0.2.3",
+    "source-map-support": "^0.5.21",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.6",
+    "ts-loader": "^9.5.4",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.9.3",
+    "webpack": "^5.103.0",
     "webpack-node-externals": "^3.0.0"
   }
 }
