--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.9",
+    "@socket.io/redis-adapter": "^8.3.0",
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.2.5",
     "class-transformer": "^0.5.1",
