:memo: OCI 관련 환경 변수 추가

--- a/.env.sample
+++ b/.env.sample
@@ -16,12 +16,21 @@ REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
 
+STORAGE_PROVIDER=
+
 AWS_REGION=
 AWS_S3_BUCKET_NAME=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_S3_BUCKET_URL=
 AWS_S3_FOLDER_NAME=
+
+OCI_REGION=
+OCI_ENDPOINT=
+OCI_BUCKET_NAME=
+OCI_ACCESS_KEY_ID=
+OCI_SECRET_ACCESS_KEY=
+OCI_FOLDER_NAME=
 
 NAVER_CLIENT_ID=
 NAVER_CLIENT_SECRET=
