:memo: R2 관련 환경변수 추가

--- a/.env.sample
+++ b/.env.sample
@@ -32,6 +32,14 @@ OCI_ACCESS_KEY_ID=
 OCI_SECRET_ACCESS_KEY=
 OCI_FOLDER_NAME=
 
+R2_REGION=
+R2_ENDPOINT=
+R2_BUCKET_NAME=
+R2_ACCESS_KEY_ID=
+R2_SECRET_ACCESS_KEY=
+R2_FOLDER_NAME=
+R2_TOKEN=
+
 NAVER_CLIENT_ID=
 NAVER_CLIENT_SECRET=
 
